Fix invalid method exception occuring with previous fix